<?xml version="1.0" encoding="utf-8"?>
<resources>

    <!--
    <string name="app_name">"Real time tracking"</string>
    <string name="dialog_alert_title">"Tips"</string>
    <string name="register_text">"register"</string>
    <string name="login_text">"login"</string>
     <string name="telephone">"cell-phone number"</string>
    <string name="password">"input password"</string>
    <string name="forgot_password">"forgot password ?"</string>
    <string name="register_password">"set password at least 6 bits"</string>
    <string name="verify_code">"Verification Code"</string>
    <string name="location_storage_permission_deny">"Permission denied. You can change permissions in Settings->Apps."</string>
    -->
    <string name="toast_permission_deny">权限被拒绝，你可以依次选择“设置”->“应用”来更改权限</string>
    <string name="app_name">"定位服务"</string>
    <string name="dialog_alert_title">"提示"</string>
    <string name="register_text">"注册"</string>
    <string name="register_already">"用户已注册"</string>
    <string name="login_text">"登录"</string>
    <string name="username_empty">"手机号不能为空"</string>
    <string name="settings_text">"设置"</string>
    <string name="help_text">"助手"</string>
    <string name="nickname">"请输入昵称"</string>
    <string name="telephone">"请输入手机号码"</string>
    <string name="password">"请输入密码"</string>
    <string name="new_password">"请设置新密码"</string>
    <string name="corfim_password">"请确认密码"</string>
    <string name="password_equal">"输入的密码不一致"</string>
    <string name="forgot_password">"忘记密码 ?"</string>
    <string name="forgot_title">"忘记密码 "</string>
    <string name="verify_code">"验证码"</string>
    <string name="submit">"提交"</string>
    <string name="issue_submit">"下一步"</string>
    <string name="confirm">"确认"</string>
    <string name="member_phone">"对方号码"</string>
    <string name="remark_name">"备注姓名"</string>
    <string name="please_input_name">"请输入备注姓名"</string>
    <string name="please_input_phone">"请输入对方号码"</string>
    <string name="member_text">"确认添加"</string>
    <string name="people_name">"姓名"</string>
    <string name="people_phone">"电话"</string>
    <string name="login_verify_toast">"手机号或者密码不对，请重新输入"</string>
    <string name="login_password_empty">"密码不能为空"</string>
    <string name="password_format_error">"密码必须是数字和字母的组合，长度必须8到12之间"</string>
    <string name="username_format_error">"请输入正确的手机号"</string>
    <string name="current_time_error">"请同步网络时间"</string>
    <string name="select_family">"请选择家人"</string>
    <string name="toast_text">"请输入完整信息"</string>
    <string name="remote_text">"远程定位"</string>
    <string name="track_text">"历史轨迹"</string>
    <string name="fence_text">"电子栅栏"</string>
    <string name="house_text">"回家指路"</string>
    <string name="family_text">"家成员管理"</string>
    <string name="location_text">"定位模式"</string>
    <string name="fast_mode">"快速定位"</string>
    <string name="normal_mode">"标准定位"</string>
    <string name="power_mode">"省电定位"</string>
    <string name="alarm_text">"报警提醒"</string>
    <string name="shock_bell_text">"震动及响铃"</string>
    <string name="bell_text">"响铃"</string>
    <string name="shock_text">"震动"</string>
    <string name="mute_text">"静音"</string>
    <string name="address_text">"设置家地址"</string>
    <string name="device_text">"设备消息"</string>
    <string name="logout_text">"退出"</string>
    <string name="add_family_member_toast">"当前家人列表为空，请"设置"-> "家成员管理"添加家庭成员！"</string>
    <string name="no_member">"你还没有家成员哦"</string>
    <string name="already_family_member">"该成员已添加"</string>
    <string name="add_family_member_title">"添加家成员"</string>
    <string name="add_family_send_sms">"添加家庭成员会向对方发送一条短信，是否允许？"</string>
    
    <string name="add_family_notice_title">"添加成员通知"</string>
    <string name="location_notice_title">"定位通知"</string>
    <string name="add_member">"添加"</string>
    <string name="secrecy_issue">"密保问题"</string>
    <string name="secrecy_answer">"请输入密保答案"</string>
    <string name="secrecy_answer_error">"答案不匹配"</string>
    <string name="people_info">"个人资料"</string>
    <string name="network_error">"没有可用网络"</string>
    <string name="network_setting">"网络连接失败，请检测网络并重试"</string>
    <string name="username_account">"手机号不能为空"</string>
    <string name="dialog_negative">"取消"</string>
    <string name="dialog_positive">"确定"</string>
    <string name="user_no_register">"该用户没有注册，请重新输入"</string>
    <string name="add_member_state_confirmed">"联系人已添加，等待对方确认"</string>
    <string name="add_member_state_no">"该用户已拒绝添加你为成员"</string>
    <string name="member_phone_error">"请输入正确的手机号码"</string>
    <string name="member_label_empty">"联系人姓名不能为空"</string>
    <string name="member_name_too_length">"昵称设置过长"</string>
    <string name="label_empty">"昵称设置过长"</string>
    <string name="my_location">"我的位置"</string>
    <string name="add_member_title">"添加联系人"</string>
    <string name="add_member_manual">"手动添加"</string>
    <string name="add_member_cantacts">"通讯录添加"</string>
    <string name="edit_member_label">"重命名"</string>
    <string name="del_member">"删除"</string>
    <string name="del_member_confirm">"确定要删除吗？"</string>
    <string name="exit_application">"退出应用"</string>
    <string name="exit_the_current_account">"退出当前账号"</string>
    <string name="dialog_rename">"请输入新的名称"</string>
    <string name="photo_from_album">"从相册中选择"</string>
    <string name="photo_from_camera">"拍摄照片"</string>
    <string name="cancle">"取消"</string>
    <string name="commit">"确定"</string>
    <string name="year">"年"</string>
    <string name="month">"月"</string>
    <string name="day">"日"</string>
    <string name="date_title">"请选择时间"</string>
    <string name="search">"搜索"</string>
    <string name="birthday">"生日"</string>
    <string name="school_name">"大学校名"</string>
    <string name="father_name">"父亲姓名"</string>
    <string name="search_address">"输入地址"</string>
    <string name="family_address_text">"设为家庭住址"</string>
    <string name="address_hint">"请输入家地址"</string>
    <string name="all_cancel">"重置"</string>
    <string name="all_sure">"确定"</string>
    <string name="fence_create_radius">"半径(m)"</string>
    <string name="fence_create_center">"围栏中心"</string>
    <string name="fence_center_toast">"围栏中心不能为空"</string>
    <string name="fence_setting_title">"围栏设置"</string>
    <string name="set_address_text">"设为家庭地址"</string>

    <!-- 报警通知标题 -->
    <string name="alarm_push_title">"百度鹰眼报警推送"</string>

    <!-- 对象（图片）操作提示信息 -->
    <string name="not_granted_album_permission">"未获取到读取相册的权限"</string>
    <string name="open_album_failed">"打开相册失败"</string>
    <string name="not_select_picture">"未获取到图片"</string>
    <string name="save_picture">"图片下载成功,正在保存..."</string>
    <string name="loc_failed">"定位失败"</string>
    <string name="start_trace">"开启服务"</string>
    <string name="stop_trace">"停止服务"</string>
    <string name="title_tips_add_family">"如下手机用户请求添加您为家庭成员，是否同意？"</string>
    <string name="str_agree">"同意"</string>
    <string name="str_refuse">"拒绝"</string>
    <string name="data_empty">"用户数据为空"</string>
    <string name="fence_in">"对方已进入围栏"</string>
    <string name="fence_out">"对方已离开围栏"</string>
    <string name="str_nick_name">"昵称"</string>
    <string name="str_account">"账户"</string>
    <string name="str_network_tips">"网络连接不可用"</string>

</resources>