<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:snser="http://schemas.android.com/apk/res/com.ovvi.remotelocation"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginLeft="12dp"
    android:layout_marginRight="12dp"
    android:orientation="vertical"
    tools:context="${relativePackage}.${activityClass}" >

    <EditText
        android:id="@+id/register_nicknamne"
        style="@style/EditTextStyle"
        android:layout_width="match_parent"
        android:layout_height="@dimen/editText_height"
        android:layout_marginTop="23dp"
        android:background="@drawable/bg_edittext"
        android:cursorVisible="true"
        android:hint="@string/nickname"
        android:maxLength="11"
        android:maxLines="1"
        android:singleLine="true" />

    <EditText
        android:id="@+id/register_phone"
        style="@style/EditTextStyle"
        android:layout_width="match_parent"
        android:layout_height="@dimen/editText_height"
        android:layout_marginTop="23dp"
        android:background="@drawable/bg_edittext"
        android:cursorVisible="true"
        android:hint="@string/telephone"
        android:inputType="phone"
        android:maxLines="1"
        android:singleLine="true" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/editText_height"
        android:layout_marginTop="23dp"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/register_issue"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginRight="10dp"
            android:layout_weight="1"
            android:gravity="center_vertical"
            android:paddingLeft="12dp"
            android:text="@string/secrecy_issue"
            android:textSize="@dimen/textView_font_size" />

        <Spinner
            android:id="@+id/spinner_view"
            android:layout_width="wrap_content"
            android:layout_height="60dp"
            android:gravity="center_vertical"
            android:theme="@android:style/Theme.Light"
            android:layout_weight="2" />

    </LinearLayout>

    <EditText
        android:id="@+id/register_secrecy_answer"
        style="@style/EditTextStyle"
        android:layout_width="match_parent"
        android:layout_height="@dimen/editText_height"
        android:layout_marginTop="23dp"
        android:background="@drawable/bg_edittext"
        android:hint="@string/secrecy_answer"
        android:maxLines="1"
        android:visibility="gone"
        android:singleLine="true" />

    <TextView
        android:id="@+id/register_birth"
        style="@style/EditTextStyle"
        android:layout_width="match_parent"
        android:layout_height="@dimen/editText_height"
        android:layout_marginTop="23dp"
        android:background="@drawable/bg_edittext"
        android:hint="@string/secrecy_answer"
        android:maxLines="1"
        android:singleLine="true" />

    <EditText
        android:id="@+id/register_password"
        style="@style/EditTextStyle"
        android:layout_width="match_parent"
        android:layout_height="@dimen/editText_height"
        android:layout_marginTop="23dp"
        android:background="@drawable/bg_edittext"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:maxLines="1"
        android:singleLine="true" />

    <EditText
        android:id="@+id/conf_password"
        style="@style/EditTextStyle"
        android:layout_width="match_parent"
        android:layout_height="@dimen/editText_height"
        android:layout_marginTop="23dp"
        android:background="@drawable/bg_edittext"
        android:hint="@string/corfim_password"
        android:inputType="textPassword"
        android:maxLines="1"
        android:singleLine="true" />

    <Button
        android:id="@+id/register_btn"
        style="@style/ButtonStyle"
        android:layout_width="match_parent"
        android:layout_height="@dimen/editText_height"
        android:layout_marginTop="60dp"
        android:background="@drawable/bg_button"
        android:text="@string/register_text" />

</LinearLayout>