<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:snser="http://schemas.android.com/apk/res/com.ovvi.remotelocation"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/login_background"
    tools:context="${relativePackage}.${activityClass}" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="11dp"
        android:layout_marginRight="11dp"
        android:orientation="vertical" >

        <com.ovvi.remotelocation.widget.ImageViewPlus
            android:id="@+id/menu_icon"
            android:layout_width="90dp"
            android:layout_height="90dp"
            android:layout_gravity="center"
            android:layout_marginTop="75dp"
            android:src="@drawable/login_icon"
            snser:borderColor="#FF0080FF"
            snser:borderWidth="3dp"
            snser:type="circle" />

        <EditText
            android:id="@+id/login_phone"
            style="@style/EditTextStyle"
            android:layout_width="match_parent"
            android:layout_height="@dimen/editText_height"
            android:layout_marginTop="40dp"
            android:background="@drawable/bg_edittext"
            android:cursorVisible="true"
            android:hint="@string/telephone"
            android:inputType="phone"
            android:maxLines="1"
            android:singleLine="true" />

        <EditText
            android:id="@+id/login_password"
            style="@style/EditTextStyle"
            android:layout_width="match_parent"
            android:layout_height="@dimen/editText_height"
            android:layout_marginTop="23dp"
            android:background="@drawable/bg_edittext"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:maxLines="1"
            android:paddingLeft="12dp"
            android:singleLine="true" />

        <Button
            android:id="@+id/login_btn"
            style="@style/ButtonStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="23dp"
            android:background="@drawable/bg_button"
            android:text="@string/login_text" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="11dp"
            android:layout_marginRight="11dp"
            android:layout_marginTop="15dp"
            android:orientation="horizontal" >

            <TextView
                android:id="@+id/register_login_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/register_text"
                android:textColor="#05a5f1"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/forgot_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:text="@string/forgot_password"
                android:textColor="#05a5f1"
                android:textSize="18sp" />
        </RelativeLayout>
    </LinearLayout>

</ScrollView>