<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginLeft="12dp"
    android:layout_marginRight="12dp"
    android:orientation="vertical" >

    <EditText
        android:id="@+id/forget_phone"
        style="@style/EditTextStyle"
        android:layout_width="match_parent"
        android:layout_height="@dimen/editText_height"
        android:layout_marginTop="23dp"
        android:background="@drawable/bg_edittext"
        android:cursorVisible="true"
        android:hint="@string/telephone"
        android:inputType="phone"
        android:maxLines="1"
        android:paddingLeft="12dp"
        android:singleLine="true" />

    <LinearLayout
        android:id="@+id/issue_verify"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="23dp"
        android:orientation="vertical"
        android:visibility="gone" >

        <TextView
            android:id="@+id/forget_issue"
            android:layout_width="match_parent"
            android:layout_height="44dp"
            android:background="@drawable/bg_edittext"
            android:gravity="center_vertical"
            android:paddingLeft="10dp"
            android:textColor="@color/editText_font_color"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/issue_answer"
            style="@style/EditTextStyle"
            android:layout_width="match_parent"
            android:layout_height="@dimen/editText_height"
            android:layout_marginTop="23dp"
            android:background="@drawable/bg_edittext"
            android:hint="@string/secrecy_answer"
            android:maxLines="1"
            android:paddingLeft="12dp"
            android:singleLine="true" />

        <TextView
            android:id="@+id/birth_answer"
            style="@style/EditTextStyle"
            android:layout_width="match_parent"
            android:layout_height="@dimen/editText_height"
            android:layout_marginTop="23dp"
            android:background="@drawable/bg_edittext"
            android:hint="@string/secrecy_answer"
            android:maxLines="1"
            android:visibility="gone"
            android:paddingLeft="12dp"
            android:singleLine="true" />

        <EditText
            android:id="@+id/forget_password"
            style="@style/EditTextStyle"
            android:layout_width="match_parent"
            android:layout_height="@dimen/editText_height"
            android:layout_marginTop="23dp"
            android:background="@drawable/bg_edittext"
            android:hint="@string/new_password"
            android:inputType="textPassword"
            android:maxLines="1"
            android:paddingLeft="12dp"
            android:singleLine="true" />
    </LinearLayout>

    <Button
        android:id="@+id/submit"
        style="@style/ButtonStyle"
        android:layout_width="match_parent"
        android:layout_height="44dp"
        android:layout_marginTop="23dp"
        android:background="@drawable/bg_button"
        android:text="@string/issue_submit" />

</LinearLayout>