<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/white"
    android:orientation="vertical" >

    <LinearLayout
        android:id="@+id/fence_create"
        android:layout_width="match_parent"
        android:layout_height="44dp"
        android:layout_marginTop="24dp"
        android:orientation="horizontal" >

        <TextView
            android:layout_width="100dp"
            android:layout_height="match_parent"
            android:gravity="right|center_vertical"
            android:text="@string/fence_create_center"
            android:textColor="@color/black"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/fence_center"
            style="@style/EditTextStyle"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="12dp"
            android:layout_weight="2"
            android:background="@drawable/bg_edittext" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/set_radius"
        android:layout_width="match_parent"
        android:layout_height="44dp"
        android:layout_below="@id/fence_create"
        android:layout_marginTop="10dp"
        android:orientation="horizontal" >

        <TextView
            android:layout_width="100dp"
            android:layout_height="match_parent"
            android:gravity="right|center_vertical"
            android:text="@string/fence_create_radius"
            android:textColor="@color/black"
            android:textSize="20sp" />

        <RelativeLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="2"
            android:paddingLeft="10dp" >

            <EditText
                android:id="@+id/fence_radius"
                style="@style/EditTextStyle"
                android:layout_width="fill_parent"
                android:layout_height="match_parent"
                android:layout_marginRight="12dp"
                android:background="@drawable/bg_edittext"
                android:gravity="center_horizontal|center_vertical"
                android:inputType="number"
                android:labelFor="@id/fence_radius"
                android:singleLine="true"
                android:text="500"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <ImageButton
                android:id="@+id/zoom_small"
                android:layout_width="28dp"
                android:layout_height="28dp"
                android:layout_alignLeft="@id/fence_radius"
                android:layout_centerVertical="true"
                android:layout_marginLeft="10dp"
                android:background="@drawable/zoom_small_icon" />

            <ImageButton
                android:id="@+id/zoom_large"
                android:layout_width="28dp"
                android:layout_height="28dp"
                android:layout_alignRight="@id/fence_radius"
                android:layout_centerVertical="true"
                android:layout_marginRight="10dp"
                android:background="@drawable/zoom_large_icon" />
        </RelativeLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="44dp"
        android:layout_below="@id/set_radius"
        android:layout_marginTop="20dp"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/fence_reset"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="#f7f7fa"
            android:text="@string/all_cancel"
            android:textColor="#05a5f1" />

        <View
            android:layout_width="1px"
            android:layout_height="match_parent"
            android:background="#d4d4d4" />

        <Button
            android:id="@+id/fence_confirm"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="#f7f7fa"
            android:text="@string/all_sure"
            android:textColor="#05a5f1" />
    </LinearLayout>

    <ListView
        android:id="@+id/center_list"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >
    </ListView>
    
</RelativeLayout>